# fcitx5-table-dayi

./: CMakeLists.txt  Messages.sh  README
icons/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  fcitx-table-dayi.pot  fcitx5-table-dayi.pot  ru  ru.po  zh_CN.po  zh_TW.po
tables/: CMakeLists.txt  dayi3.conf.in  dayi3.txt
